# watchtower

./: .gitignore  README.md  pyproject.toml
contrib/: annotate-widget.js  annotate-widget.md
docs/: agent-discovery.md  ccc-watchtower-boundary.md  cli.html  engine-capability-matrix.md  index.html  integration.html  messaging-design.md  session-naming.md  site-notes.md  snapshot-site.js  styles.css  worker-lifecycle.md  worker-runbook.md  wt-ccc-migration.md
docs/specs/: 2026-07-16-doc-to-queue-design.md  2026-07-16-doc-to-queue-landing.md
docs/superpowers/plans/: 2026-07-02-durable-worker-session-names.md  2026-07-16-doc-to-queue.md
docs/superpowers/specs/: 2026-07-02-durable-worker-session-names-design.md  2026-07-04-ticket-event-log-design.md  (+1 more)
examples/: quickstart-demo.sh
tests/: test_answer_resume.py  test_ask_webhook.py  test_chat_cli.py  test_chat_policy.py  test_chats.py  test_codex_rpc.py  test_critique.py  test_dashboard_auth.py  test_dashboard_chats_view.py  test_dashboard_mobile.py  test_document_import.py  test_find_cli.py  test_github_backend.py  test_health.py  test_launchagent_plist.py  test_logmaint.py  test_messages.py  test_messages_reaper.py  test_messages_resume_delivery.py  test_queue.py  test_receipts.py  test_skills_sync.py  test_smoke.py  test_tty_adapter.py  test_workers_lifecycle.py
watchtower/: __init__.py  chats.py  cli.py  codex_registry.py  codex_rpc.py  config.py  dashboard.py  document_import.py  github_backend.py  health.py  logmaint.py  messages.py  queue.py  receipts.py  registry.py  skills_sync.py  tty.py  workers.py
(+10 files in other folders)
